# Ground_Filtering

./: README.md
cpp/: CMakeLists.txt
cpp/src/: Cloth.cpp  Cloth.h  GroundFilter.cpp  GroundFilter.h  Particle.cpp  Particle.h  Vector3d.cpp  Vector3d.h  main.cpp
data/: delft_gf_csf.laz  delft_gf_csf_0.5m_collision_first.laz  delft_gf_csf_0.5m_secondary_neighbor.laz  delft_gf_csf_0.5m_spring_first.laz  delft_gf_csf_classification_1.laz  delft_gf_csf_cloth_Intersection_Height_Value_before_reversing.laz  delft_gf_csf_cloth_initial_position.laz  delft_gf_csf_first_collision_then_spring.laz  delft_gf_csf_first_spring_then_collision.laz  delft_gf_csf_inverse_ptcloud.laz  delft_gf_csf_iterate170_gravitty.laz  delft_gf_tin.laz  params.json  part_delft_ahn3.laz  part_veluwezoom_ahn3.laz  part_wassenaar_ahn3.laz  veluwezoom_gf_csf.laz  wassenaar_gf_csf.laz  wassenaar_gf_tin.laz
